2007-05-26 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.7.0 RC3

2007-05-22 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.7.0 RC2, availability of
	  "Anatomy of a Compiler A Retargetable ANSI-C Compiler"

2007-05-21 Borut Razem <borut.razem AT siol.net>

	* index.php: fixed ASXXXX typo
	* left_menu.inc: added link to the Sandeep's article

2007-05-10 Borut Razem <borut.razem AT siol.net>

	* index.php, previous.php: sdcc 2.7.0 RC1 announced, nodes old news to
	  previous.php

2007-04-08 Borut Razem <borut.razem AT siol.net>

	* index.php: replaced "freeware" with "Free Open Source Software",
	  announce "officially supported" platforms, ...
	* links.php: removed unreachable pages

2007-03-31 Borut Razem <borut.razem AT siol.net>

	* cygwin_help.html, flatmode.txt, sdcc-install-nt.html, sdcc.gif,
	  sdcctarbin.html: added

2007-03-28 Borut Razem <borut.razem AT siol.net>

	* index.php, snap_header.php:
	  "Nightly Snapshots" replaced with "Snapshot Builds", since the SDCC
	  is developed, built and used worldwide, and the word "night" doesn't
	  make any sense.

2007-03-26 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: added link to Ohloh

2007-01-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added link for webdoc 1445872,
	  updated www.soudez.be with unfound product

2007-01-02 Borut Razem <borut.razem AT siol.net>

	* links.php: removed old broken links, new broken links marked as
	  (Page Not Found), closed [ 948959 ] Add a link Request: link removed

2006-10-31 Borut Razem <borut.razem AT siol.net>

	* index.php: ucSim and sdcdb are now avaialble also in WIN32 platforms

2006-10-30 Borut Razem <borut.razem AT siol.net>

	* index.php, previous.php: moved no-so-fresh-news to past news and
	  previous news
	* left_menu.inc: use absolute paths instead full URLs

2006-10-23 Borut Razem <borut.razem AT siol.net>

	* index.php: corrected keywords to pass the w3c XHTML 1.0 validation
